--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "public",
+    "public": "functions",
     "rewrites": [{
       "source": "**",
       "function": "app"
