--- a/functions/package.json
+++ b/functions/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "commonjs",
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
@@ -14,8 +15,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@firebase/app": "^0.9.3",
+    "@firebase/storage": "^0.11.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "firebase": "^9.17.1",
     "firebase-admin": "^10.3.0",
     "firebase-functions": "^4.2.1",
     "path": "^0.12.7"
