--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "@firebase/storage": "^0.11.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.17.1",
     "firebase-admin": "^10.3.0",
     "firebase-functions": "^4.2.1",
