--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/akanuma2357/gakugeki_website#readme",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "firebase": "^9.17.1",
-    "firebase-functions": "^4.2.1"
+    "file-saver": "^2.0.5",
+    "firebase": "^9.18.0",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
+    "path": "^0.12.7"
   }
 }
